# tsEasyBinding

./: README.md  package-lock.json  package.json  tsconfig.json
c++/: CMakeLists.txt
c++/Duktape/: duk_config.h
c++/easyBindings/: ApiEnter.cpp  ApiEnter.h  BindingSys.cpp  BindingSys.h  CMakeLists.txt  Embedable.h  JSEnv.h  JsBase.h  ValTran..cpp  ValTran.h  autoApi.h  easyBinding.cpp  easyBinding.h  qjsHelper.cpp  qjsHelper.h  quickjs-libc.cpp
c++/easyBindings/jsbApis/: manualApi.cpp
c++/easyBindings/quickjs/: JSCall.h  JSContext.h  JSParse.h  cutils.c  cutils.h  libregexp.c  quickjs-debugger-transport-unix.c  quickjs-debugger-transport-windows.c  quickjs-debugger.c  quickjs-debugger.h  quickjs-defs.h  quickjs-libc.h  quickjs.c  quickjs.h  quickjsInternal.h
c++/easyBindings/quickjs/vs/: msvc-defs.c  msvc-defs.h
c++/example/: AllInclude.h  Button.h  CMakeLists.txt  Element.h  Input.h  Label.h  Object.h  ValTran.h  View.h  bindingHelper.cpp  bindingHelper.h
c++/example/ScriptBinding/jsbApis/: bindingImport.h  exampleApi.cpp
c++/example/tsProj/: example.d.ts  main.js
src/: ArgDatas.js  ArgDatas.js.map  BindingData.js  BindingData.js.map  BindingPackage.js  BindingPackage.js.map  DukEmitter.js  DukEmitter.js.map  FuncEmitter.js  FuncEmitter.js.map  RegisterType.js  RegisterType.js.map  Sys.js  Sys.js.map  TsEmitter.js  TsEmitter.js.map  VarEmitter.js  VarEmitter.js.map  bindingConfig.js  bindingConfig.js.map  main.js  main.js.map  test.js  test.js.map  testFile.js  testFile.js.map  utils.js  utils.js.map  writter.js  writter.js.map
tsSrc/: ArgDatas.ts  (+10 more)
(+64 files in other folders)
